<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item
                android:title="Navigation">
            <menu>
                    <item
                        android:id="@+id/homeItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:icon="@drawable/baseline_home_24"
                        android:checkable="true"
                        android:title="@string/home" />

                    <item
                        android:id="@+id/carMenuItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:icon="@drawable/baseline_directions_car_24"
                        android:checkable="true"
                        android:title="@string/cars" />

                    <item
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:icon="@drawable/baseline_favorite_24"
                        android:checkable="true"
                        android:title="@string/favorites" />
                    <item
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:icon="@drawable/baseline_bookmark_24"
                        android:checkable="true"
                        android:title="@string/reservations" />
                    <item
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:icon="@drawable/baseline_local_offer_24"
                        android:checkable="true"
                        android:title="@string/special_offers" />
            </menu>
        </item>


        <item
            android:title="Utility">
                <menu>
                        <item
                            android:id="@+id/profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:icon="@drawable/baseline_group_add_24"
                            android:title="Profile" />
                        <item
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:icon="@drawable/baseline_local_phone_24"
                            android:title="@string/call_us_or_find_us" />


                        <item
                            android:id="@+id/logout_group"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:icon="@drawable/baseline_logout_24"
                            android:title="@string/logout" />
                </menu>
        </item>



</menu>