<!-- Assuming this is part of your layout XML -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_marginTop="100dp"
    tools:context=".ContactFragment">

    <!-- Your existing UI elements -->

    <!-- Contact Section -->
    <TextView
        android:id="@+id/textContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:padding="16dp"
        android:text="We look forward to hearing from you! Contact us through the options below:"
        android:textAlignment="center"
        android:textColor="#000000"
        android:layout_marginBottom="50dp"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
        <Button
            android:id="@+id/call"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/paypal_blue"
            android:text="@string/call"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_local_phone_24" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
        <Button
            android:id="@+id/mail"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/paypal_blue"
            android:text="@string/mail"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_mail_24"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
        <Button
            android:id="@+id/maps"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/paypal_blue"
            android:text="@string/maps"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:layout_gravity="end"
            app:icon="@drawable/baseline_location_pin_24" />
        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" >
        </Space>
    </LinearLayout>
</LinearLayout>
