<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Customer.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_header"
        android:layout_width="237dp"
        android:layout_height="185dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/dark_aesthetic_anime_pfp_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_swap"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/circle_background"
        android:src="@drawable/rounded_add_24"
        android:tint="#FBFAFA"
        app:layout_constraintBottom_toBottomOf="@id/profile_image_header"
        app:layout_constraintEnd_toEndOf="@id/profile_image_header"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="@id/profile_image_header"
        app:layout_constraintTop_toTopOf="@id/profile_image_header"
        app:layout_constraintVertical_bias="0.909" />

    <TextView
        android:id="@+id/name_textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/antic"
        android:text="Mohammad Abu-Shelbaia"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_header"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/email_textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/rubik_light"
        android:text="mabushelbaia@gmail.com"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        android:textColor="?attr/colorOnSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textField"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingBottom="7dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fName_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/black"
                app:suffixTextColor="@color/black"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lName_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:hint="@string/last_name"
                android:paddingStart="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/black"
                app:suffixTextColor="@color/black"
                tools:ignore="RtlSymmetry">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:paddingBottom="7dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/phone_number"
                android:textColorHint="@color/gray"
                app:boxStrokeColor="@color/black"
                app:prefixTextColor="@color/paypal_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:shadowColor="#000000"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingBottom="7dp"

            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:shadowColor="#000000"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cPassword_text_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:paddingBottom="7dp"
            android:textColorHint="@color/gray"

            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:shadowColor="#000000"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="4" />
            <Button
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:backgroundTint="@color/paypal_blue"

                android:text="@string/cancel"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_cancel_24"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/saveButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:backgroundTint="@color/paypal_blue"

                android:text="@string/save"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_save_24"
                app:iconGravity="textStart" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="4" />

        </LinearLayout>
    </LinearLayout>


        <Button
            android:id="@+id/edit_profile"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/paypal_blue"
            android:text="@string/edit_profile"
            android:textColor="@color/white"
            app:cornerRadius="10dp"
            android:layout_marginTop="10dp"
            app:icon="@drawable/baseline_edit_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textField">
        </Button>



</androidx.constraintlayout.widget.ConstraintLayout>